fixed 'About' padding on Mobile & shortened certificate ul

--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,12 @@ h3 {
   /*background-color: var(--clr-accent);*/
 }
 
+@media (max-width: 900px) {
+  .card--about {
+    padding: 0 2em;
+  }
+}
+
 /* END: Cards */
 
 a.anchor{
